<resources>
    <string name="app_name">DevCrewChallange</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="Product_list">Product List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="no_first_name">Please enter first name!</string>
    <string name="no_last_name">Please enter last name!</string>
    <string name="msg_contact_add">Contact has been added successfully.</string>
    <string name="create_product">Create Product</string>
    <string name="show_product">Show Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="description">Description</string>
    <string name="reguler_price">Reguler Price</string>
    <string name="_200_0">200.0</string>
    <string name="sale_price">Sale Price</string>
    <string name="colors">Colors</string>
    <string name="c">c</string>
    <string name="stores">Stores</string>
    <string name="image">Image</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="add_product">Add Product</string>
    <string name="wall_mart">Wall Mart</string>
    <string name="metro">Metro</string>
    <string name="demo_products_key">is demo products added</string>
    <string name="product_detail">Product Detail</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="select_image">Select Image</string>
    <string name="update_product">Update Product</string>
</resources>
