<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.devcrewchallange.activities.CreateProductActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_ImageView"
                android:layout_width="@dimen/dp_100"
                android:layout_height="@dimen/dp_100"
                android:layout_margin="@dimen/five"

                android:background="@drawable/slect" />

            <Button
                android:id="@+id/select_image_Button"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_image" />

        </LinearLayout>


        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five"
            android:hint="@string/product_name" />


        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five"
            android:hint="@string/product_description" />

        <EditText
            android:id="@+id/regular_price_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five"
            android:hint="@string/reguler_price"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/sale_price_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five"
            android:hint="@string/sale_price"
            android:inputType="numberDecimal" />


        <LinearLayout
            android:id="@+id/checkbox_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/red_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five"
                android:text="@string/red" />

            <CheckBox
                android:id="@+id/blue_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five"
                android:text="@string/blue" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/checkbox_container2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/five"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/wall_mart_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five"
                android:text="@string/wall_mart" />

            <CheckBox
                android:id="@+id/metro_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/five"
                android:text="@string/metro" />

        </LinearLayout>


        <Button
            android:id="@+id/create_product_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten"
            android:background="@color/colorPrimary"
            android:text="@string/add_product"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>
