<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/dp_5"
    android:layout_marginRight="@dimen/dp_5"
    android:layout_marginTop="@dimen/dp_5"
    android:fitsSystemWindows="true"
    android:orientation="horizontal"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/product_imageview"
            android:layout_width="@dimen/hundred"
            android:layout_height="@dimen/hundred"
            android:layout_gravity="center_vertical" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp10">

            <TextView
                android:id="@+id/product_name_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/product_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name" />


            <TextView
                android:id="@+id/product_description_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_description"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="3"
                android:gravity="left"
                android:lines="2"
                android:text="@string/description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/regular_price_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reguler_price"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/regular_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:text="@string/_200_0" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/sale_price_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale_price"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/sale_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_200_0"
                android:layout_marginLeft="@dimen/dp_10"/>
            </LinearLayout>
            <TextView
                android:id="@+id/colors_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colors"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c" />


            <TextView
                android:id="@+id/stores_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stores"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/stores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c" />


        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>