<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dp_10">

        <ImageView
            android:id="@+id/pDetail_image_imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/pDetail_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:text="TextView"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/pDetail_description_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"

            android:text="TextView" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pDetail_salePrice_textView_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sale_price"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pDetail_salePrice_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pDetail_regular_price_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reguler_price"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pDetail_rgPrice_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pDetail_colors_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/colors"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pDetail_colors_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pDetail_stores_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stores"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pDetail_stores_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pDetail_update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/update"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pDetail_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_7"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/delete"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>